--- a/Micv/index.html
+++ b/Micv/index.html
@@ -176,7 +176,7 @@
             <tr>
                 <th><h4>Contact me</h4></th>
                 <th></th>
-                <th><h4>Leave a comment or suggestion :)</h4></th>
+                <!--<th><h4>Leave a comment or suggestion :)</h4></th>-->
             </tr>
             <tr>
                 <td>
@@ -191,12 +191,12 @@
                 </td>
 
                 <td>
-                    <form>
+                   <!-- <form>
                         <div class="mb-3">
                           <input type="text" class="form-control" id="comment-sugges" aria-describedby="emailHelp">
                         </div>
                         <button type="submit" class="btn btn-outline-success">Submit</button>
-                      </form>
+                      </form>-->
                 </td>
             </tr>
             
