--- a/Micv/index.html
+++ b/Micv/index.html
@@ -26,7 +26,7 @@
                     <div class="inner">
                         <h2>Aboute me</h2>
                         <p class="paragraph">
-                            Recent Grad Computer and systems Engineer from UPAEP.
+                            Recent Grad Computer and systems Engineer from Universidad Popular Autónoma del Estado de Puebla (UPAEP).
                         </p>
                         <p class="paragraph">
                             I am deeply passionate about programming and thrive on the opportunity to continually expand my knowledge base.
@@ -130,10 +130,10 @@
                     <div class="inner">
                         <div class="item">
                             <h3>Education</h3>
-                            <h4>UPAEP</h4>
+                            <h4>Universidad Popular Autónoma del Estado de Puebla (UPAEP), México</h4>
                             <p class="paragraph">Aug 2018 - Jul 2024</p>
                             <p class="paragraph"> Bachelor's degree in Computer Engineering and Systems</p>
-                            <h4> University of Notre Dame</h4>
+                            <h4> University of Notre Dame, Indiana</h4>
                             <p class="paragraph">Jun 2023 - Jul 2023</p>
                             <p class="paragraph">International Summer Undergraduate Research Expierience</p>
                             <p class="paragraph">Research topic: VR Aplication Predict
