--- a/Micv/index.html
+++ b/Micv/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="Styles/bootstrap.min.css">
     <link rel="stylesheet" href="Styles/style.css">
+    <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
 </head>
 <body>
     <!--CABECERA-->
@@ -163,6 +164,20 @@
                                 <li class="list-group-item list-group-item-dark">VLSM</li>
                                 <li class="list-group-item list-group-item-dark">Cisco IOS</li>
                               </ul>
+                        </div>
+                    </div>
+                </section>
+
+                <section class="Badges">
+                    <div class="inner">
+                        <div class="item">
+                            <h3>Badges</h3>
+                            <p class="paragraph"> Through course I have earned the following Badges</p>
+                            <div data-iframe-width="250" data-iframe-height="270" data-share-badge-id="8ed3c52b-97b3-4578-bbf9-80ecadef851f" data-share-badge-host="https://www.credly.com"></div>
+                            <div data-iframe-width="250" data-iframe-height="270" data-share-badge-id="1808104f-bf24-4405-b8ef-3eaacc52013c" data-share-badge-host="https://www.credly.com"></div>
+                            <div data-iframe-width="250" data-iframe-height="270" data-share-badge-id="69942221-938a-401b-bf6c-8bd06d7fa26f" data-share-badge-host="https://www.credly.com"></div>
+                            <div data-iframe-width="250" data-iframe-height="270" data-share-badge-id="fb84478d-be75-4032-8917-a8d93a0920a1" data-share-badge-host="https://www.credly.com"></div>
+                            
                         </div>
                     </div>
                 </section>
