Added network project

--- a/Micv/index.html
+++ b/Micv/index.html
@@ -30,16 +30,13 @@
                             Recent Grad Computer and systems Engineer from Universidad Popular Autónoma del Estado de Puebla (UPAEP).
                         </p>
                         <p class="paragraph">
-                            I am deeply passionate about programming and thrive on the opportunity to continually expand my knowledge base.
+                            I like to program and learn about computer networks.
                         </p>
                         <p class="paragraph">
-                            I am intrested in the fields of software development and networking. I am committed to embracing challenges and leveraging my existing skills to drive growth and innovation.
+                            I am intrested in the fields of software development and networking. To exapnd and apply my knowledge.
                         </p>
                         <p class="paragraph">
-                            I recognize the importance of soft skills in fostering effective communication, collaboration, and leadership, and I am dedicated to honing these qualities alongside my technical abilities. 
-                        </p>
-                        <p class="paragraph">
-                            I am driven by a desire to contribute meaningfully to the industry, make a positive impact, and achieve my professional aspirations.
+                            Here's a web page where you can find some projects and badges I've done and earned throughout my journey.
                         </p>
                     </div>
                 </section>
@@ -85,15 +82,51 @@
                         <hr>
 
                         <div class="item">
-                            <h3>Grapher</h3>
+                            <h3>Network For UPAEP</h3>
                             <!--<a href="#">
                                 <img src="#" alt="grapher">
                             </a>-->
-                            <video class="img-responsive" controls>
-                                <source src="img/Grapher.mp4" type="video/mp4">
-                                Your browser does not support the video tag.
-                            </video>
-                            <p class="paragraph">One of the first projects using Java</p>
+                            <p class="paragraph">A project where we made a network for the campus (hypothetical).</p>
+                            <img src="network/Network.png" alt="">
+                            <p class="paragraph">Each Building (A, B, C, T, CUC) in a seperate packet following these instructions.</p>
+                            <a href="network/Proyecto final redes Cisco2 p21.doc" download>Instructions</a>
+                            <p class="paragraph">The packets are as follow each in a separate packet (Click each image to download the packet.)</p>
+                            <span>Building A</span>
+                            <a href="network/Edificio A - copia.pkt">
+                                <img class="img-responsive" src="img/Edificio A.png" alt="Building A">
+                            </a>
+                            <span>Building B</span>
+                            <a href="network/Edificio B.pkt">
+                                <img class="img-responsive" src="img/Edificio B.png" alt="Building B">
+                            </a>
+                            <span>Building C</span>
+                            <a href="network/Edificio C - copia.pkt">
+                                <img class="img-responsive" src="img/Edificio C.png" alt="Building C">
+                            </a>
+                            <span>Building CUC</span>
+                            <a href="network/EDIFICIO CUC.pkt">
+                                <img class="img-responsive" src="img/Edofocio CUC.png" alt="Building CUC">
+                            </a>
+                            <span>Building T</span>
+                            <a href="network/Edificio T - copia.pkt">
+                                <img class="img-responsive" src="img/Edificio T.png" alt="Building T">
+                            </a>
+                            <P class="paragraph">For this project the following was used</P>
+                            <ul>
+                                <li>VLSM</li>
+                                <li>EIGRP</li>
+                                <li>VLAN</li>
+                                <li>Access lists</li>
+                                <li>NAT</li>
+                                <li>FTP</li>
+                                <LI>DNS</LI>
+                                <LI>Wireless</LI>
+                                <li>Web server</li>
+                            </ul>
+                            <P class="paragraph">For a simple and reduce explanation of the project here is the following presentation</P>
+                            <div class="iframe-container">
+                                <iframe class="i" src="https://onedrive.live.com/embed?resid=BFFBACB11FDA0DE0%2123411&amp;authkey=!ABeJ3SclPscjGMQ&amp;em=2&amp;wdAr=1.7777777777777777" frameborder="0">Esto es un documento de <a target="_blank" href="https://office.com">Microsoft Office</a> incrustado con tecnología de <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+                            </div>
                         </div>
 
                         <hr>
@@ -117,11 +150,28 @@
                         <hr>
 
                         <div class="item">
+                            <h3>Grapher</h3>
+                            <!--<a href="#">
+                                <img src="#" alt="grapher">
+                            </a>-->
+                            <video class="img-responsive" controls>
+                                <source src="img/Grapher.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
+                            <p class="paragraph">One of the first projects using Java. A simple grapher of a polynomial equation.</p>
+                        </div>
+
+                        <hr>
+
+                        <div class="item">
                             <h3>In the future</h3>
                             <p class="paragraph">
                                 I'm in the process of learning about AI in Python and web apps for some future  simulations here
                             </p>
                         </div>
+
+                        <hr>
+                        
 
                     </div>
                 </section>
