Arreglar el futuro

--- a/Micv/index.html
+++ b/Micv/index.html
@@ -87,7 +87,7 @@
                                 <img src="#" alt="grapher">
                             </a>-->
                             <p class="paragraph">A project where we made a network for the campus (hypothetical).</p>
-                            <img src="network/Network.png" alt="">
+                            <img class="img-responsive" src="network/Network.png" alt="">
                             <p class="paragraph">Each Building (A, B, C, T, CUC) in a seperate packet following these instructions.</p>
                             <a href="network/Proyecto final redes Cisco2 p21.doc" download>Instructions</a>
                             <p class="paragraph">The packets are as follow each in a separate packet (Click each image to download the packet.)</p>
@@ -166,7 +166,7 @@
                         <div class="item">
                             <h3>In the future</h3>
                             <p class="paragraph">
-                                I'm in the process of learning about AI in Python and web apps for some future  simulations here
+                                I'm in the process of learning about AI in Python, web apps for some future simulations here and continuing my knowledge in computer networks.
                             </p>
                         </div>
 
