--- a/Micv/index.html
+++ b/Micv/index.html
@@ -186,9 +186,13 @@
                             <p class="paragraph"> Bachelor's degree in Computer Engineering and Systems</p>
                             <h4> University of Notre Dame, Indiana</h4>
                             <p class="paragraph">Jun 2023 - Jul 2023</p>
-                            <p class="paragraph">International Summer Undergraduate Research Expierience</p>
+                            <p class="paragraph">International Summer Undergraduate Research Experience</p>
                             <p class="paragraph">Research topic: VR Aplication Predict
-                                Predict the Application that end user is runnig thru the network traces (captured on wireshark).</p>
+                                Predict the Application that end user is runnig thru the network traces (captured on wireshark).
+                            </p>
+                            <h4>Customer Experience Academy (CXA)</h4>
+                            <p class="paragraph">Jan 2024 - Present</p>
+                            <p class="paragraph">Winter Integration Program</p>
                         </div>
                     </div>
                 </section>
