Adde PowerBi embeded Code

--- a/Micv/index.html
+++ b/Micv/index.html
@@ -71,12 +71,15 @@
                         
                         <div class="item">
                             <h3>Spotify Dashboard</h3>
-                            <a href="https://app.powerbi.com/view?r=eyJrIjoiYjdmYzcyNzQtMmY4OS00YjgwLWI0N2ItYzIwYmFlZjRjZmZiIiwidCI6IjM2YjZhN2EyLTNjYTctNDk4MS1hNGE5LTVlNmM4MmRkNGUwNiJ9" target="_blank">
+                            <!--<a href="https://app.powerbi.com/view?r=eyJrIjoiYjdmYzcyNzQtMmY4OS00YjgwLWI0N2ItYzIwYmFlZjRjZmZiIiwidCI6IjM2YjZhN2EyLTNjYTctNDk4MS1hNGE5LTVlNmM4MmRkNGUwNiJ9" target="_blank">
                                 <img class="img-responsive" src="img/Dashboard Spotify.png" alt="Spotify">
-                            </a>
+                            </a>-->
                             <p class="paragraph">
                                 Learned some Data Analytics by sharing my Spotify history using R and PowerBI
                             </p>
+                            <div class="iframe-container">
+                                <iframe title="MiSpotify" src="https://app.powerbi.com/view?r=eyJrIjoiYjdmYzcyNzQtMmY4OS00YjgwLWI0N2ItYzIwYmFlZjRjZmZiIiwidCI6IjM2YjZhN2EyLTNjYTctNDk4MS1hNGE5LTVlNmM4MmRkNGUwNiJ9" frameborder="0" allowFullScreen="true"></iframe>
+                            </div>
                         </div>
 
                         <hr>
