--- a/Micv/index.html
+++ b/Micv/index.html
@@ -123,6 +123,7 @@
                                 <li>NAT</li>
                                 <li>FTP</li>
                                 <LI>DNS</LI>
+                                <li>DHCP</li>
                                 <LI>Wireless</LI>
                                 <li>Web server</li>
                             </ul>
@@ -172,9 +173,6 @@
                                 I'm in the process of learning about AI in Python, web apps for some future simulations here and continuing my knowledge in computer networks.
                             </p>
                         </div>
-
-                        <hr>
-                        
 
                     </div>
                 </section>
